--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-native-video": "^6.14.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "rebellionagainsttheking": "file:"
+    "rebellionagainsttheking": "file:",
+    "expo-video": "~2.2.2",
+    "expo-av": "~15.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
