changed to landscape

--- a/app.json
+++ b/app.json
@@ -3,8 +3,7 @@
     "name": "RebellionAgainstTheKing",
     "slug": "RebellionAgainstTheKing",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "orientation": "landscape",
     "scheme": "rebellionagainsttheking",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
