--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-webview": "13.13.5",
     "rebellionagainsttheking": "file:",
     "expo-video": "~2.2.2",
-    "expo-av": "~15.1.6"
+    "expo-av": "~15.1.6",
+    "expo-screen-orientation": "~8.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
