--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "rebellionagainsttheking": "file:",
     "expo-video": "~2.2.2",
     "expo-av": "~15.1.6",
-    "expo-screen-orientation": "~8.1.7"
+    "expo-screen-orientation": "~8.1.7",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
