--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "expo-video": "~2.2.2",
     "expo-av": "~15.1.6",
     "expo-screen-orientation": "~8.1.7",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-secure-store": "~14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
