--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.9",
+    "expo-av": "~15.1.6",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -23,11 +25,15 @@
     "expo-image": "~2.1.7",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.6",
+    "expo-screen-orientation": "~8.1.7",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
+    "expo-video": "~2.2.2",
     "expo-web-browser": "~14.1.6",
+    "peerjs": "^1.5.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -39,13 +45,9 @@
     "react-native-screens": "~4.10.0",
     "react-native-video": "^6.14.0",
     "react-native-web": "~0.20.0",
+    "react-native-webrtc": "^124.0.7",
     "react-native-webview": "13.13.5",
-    "rebellionagainsttheking": "file:",
-    "expo-video": "~2.2.2",
-    "expo-av": "~15.1.6",
-    "expo-screen-orientation": "~8.1.7",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-secure-store": "~14.2.4"
+    "rebellionagainsttheking": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
